--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,18 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.jboss.sbs</groupId>
 	<artifactId>human-friendly-urls-links</artifactId>
-	<name>Extension of SBS plugin Human friendly URLs</name>
+	<name>Extension of Jive SBS plugin Human friendly URLs</name>
 	<description>Extension that override functionality of Struts2 URL tag and use implementation of spring managed bean
 		that override Struts2 URL Component
 	</description>
 	<url>https://github.com/jbossorg/sbs-human-friendly-urls-links</url>
-	<version>2.0.0</version>
+	<version>7.0.0</version>
+
+	<parent>
+		<groupId>com.jivesoftware.maven</groupId>
+		<artifactId>jive-parent-pom</artifactId>
+		<version>7.0.3.1-0</version>
+	</parent>
 
 	<inceptionYear>2009</inceptionYear>
 	<licenses>
@@ -46,48 +52,17 @@
 
 
 	<properties>
-		<sbs.version>4.5.6.0</sbs.version>
-		<java.version>1.6</java.version>
-		<final.name>${project.artifactId}-${project.version}-${sbs.version}</final.name>
+		<jive.min.version>${jive.version.min}</jive.min.version>
+		<jive.max.version>10.10.10.10</jive.max.version>
 	</properties>
 
 	<build>
-		<finalName>${final.name}</finalName>
+		<outputDirectory>${project.build.directory}/classes</outputDirectory>
+
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>${java.version}</source>
-					<target>${java.version}</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>jar</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<additionalProjectnatures>
-						<projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
-					</additionalProjectnatures>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
@@ -95,31 +70,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.jivesoftware</groupId>
-			<artifactId>jive-sbs-employee</artifactId>
-			<version>${sbs.version}</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.jivesoftware</groupId>
-			<artifactId>jive-sbs-employee-all</artifactId>
-			<version>${sbs.version}</version>
-			<type>pom</type>
-			<scope>provided</scope>
+			<artifactId>jive-core</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>2.3</version>
-			<type>jar</type>
-			<scope>provided</scope>
-		</dependency>
-		<!-- The following dependencies are for unit testing -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
