upgraded to jive 8

--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,12 @@
 		that override Struts2 URL Component
 	</description>
 	<url>https://github.com/jbossorg/sbs-human-friendly-urls-links</url>
-	<version>7.0.0</version>
+	<version>8.0.0</version>
 
 	<parent>
 		<groupId>com.jivesoftware.maven</groupId>
 		<artifactId>jive-parent-pom</artifactId>
-		<version>7.0.3.1-0</version>
+		<version>8.0.4.0-3</version>
 	</parent>
 
 	<inceptionYear>2009</inceptionYear>
@@ -74,7 +74,7 @@
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
+			<artifactId>${servlet.api.artifactId}</artifactId>
 		</dependency>
 	</dependencies>
 
